--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -9,6 +9,15 @@
     </welcome-file-list>
 
     <servlet>
+        <servlet-name>Admin</servlet-name>
+        <servlet-class>controller.admin.AdminServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Admin</servlet-name>
+        <url-pattern>/admin/admin</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
         <servlet-name>Register</servlet-name>
         <servlet-class>controller.user.UserServlet</servlet-class>
     </servlet>
@@ -63,6 +72,15 @@
     </servlet-mapping>
 
     <servlet>
+        <servlet-name>Admin Logout</servlet-name>
+        <servlet-class>controller.LogoutServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Admin Logout</servlet-name>
+        <url-pattern>/admin/logout</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
         <servlet-name>Book</servlet-name>
         <servlet-class>controller.BookServlet</servlet-class>
     </servlet>
@@ -88,6 +106,15 @@
     <servlet-mapping>
         <servlet-name>Order</servlet-name>
         <url-pattern>/order</url-pattern>
+    </servlet-mapping>
+
+    <servlet>
+        <servlet-name>Get All Order</servlet-name>
+        <servlet-class>controller.admin.OrderHistoryServlet</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>Get All Order</servlet-name>
+        <url-pattern>/admin/getOrder</url-pattern>
     </servlet-mapping>
 
     <servlet>
